# Linga

./: .gitignore  .hgignore  .htaccess  Gruntfile.js  Linga.komodoproject  README.txt  bower.json  config.py  linga.db  package-lock.json  package.json  pyproject.toml  requirements.txt  runcgi.py  runserver.py
.komodotools/: Run_Jasmine_Tests.komodotool
linga/: __init__.py  app.py  auth.py  comics.py  views.py
linga/static/css/: styles.css
linga/static/js/: comicview.js
linga/templates/: layout.html  show-book-list.html  show-book.html
linga/templates/user/: create.html  login.html
tests/javascript/: ComicPage.js  SpecRunner.html
tests/python/: test_auth.py  test_comics.py  test_views.py
