[tool.poetry]
name = "Linga"
version = "0.1.0"
description = ""
authors = ["Peter Geer <pageer@skepticats.com>"]

[tool.poetry.dependencies]
python = "3.7.*"
Flask = "^1.1.2"
Flask-Login = "^0.5.0"
SQLAlchemy = "^1.3.16"
Flask-SQLAlchemy = "^2.4.1"
Pillow = "^8.1.1"
rarfile = "^3.1"
python-dotenv = "^0.13.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
pylint = "^2.4.4"
